--- a/Assets/UI/HUD.uxml
+++ b/Assets/UI/HUD.uxml
@@ -8,7 +8,7 @@
             <ui:Label text="12/12" display-tooltip-when-elided="true" name="goal-count" class="text" />
         </ui:VisualElement>
     </ui:VisualElement>
-    <ui:VisualElement style="-unity-text-align: middle-center; -unity-font-style: bold; text-shadow: 1px 1px 0 rgb(0, 0, 0); -unity-text-outline-width: 0.5px; -unity-text-outline-color: rgb(0, 0, 0); position: absolute; top: 486px; left: 936px;">
+    <ui:VisualElement style="-unity-text-align: middle-center; -unity-font-style: bold; text-shadow: 1px 1px 0 rgb(0, 0, 0); -unity-text-outline-width: 0.5px; -unity-text-outline-color: rgb(0, 0, 0); position: absolute; top: 47%; left: 49%;">
         <ui:Label text="5" display-tooltip-when-elided="true" name="timer" class="text" />
     </ui:VisualElement>
     <ui:VisualElement style="position: absolute; width: 128px; height: 128px; top: 42px; left: 895px; background-image: url(&apos;project://database/Assets/UI/WaypointImage.renderTexture?fileID=8400000&amp;guid=45b6768b2c599f14598de53bfea395ac&amp;type=2#WaypointImage&apos;);" />
