--- a/Assets/UI/style.uss
+++ b/Assets/UI/style.uss
@@ -1,4 +1,12 @@
 .text {
     font-size: 50px;
-    color: rgba(255, 255, 255, 255);
+    color: rgb(255, 255, 255);
+}
+
+.vertical-list-button {
+    background-color: rgba(164, 161, 161, 255);
+    color: rgba(0, 0, 0, 255);
+    font-size: 28px;
+    width: 100%;
+    -unity-text-align: middle-center;
 }
