--- a/Assets/UI/style.uss
+++ b/Assets/UI/style.uss
@@ -6,22 +6,31 @@
 .vertical-list-button {
     font-size: 28px;
     color: rgba(0, 0, 0, 255);
-    width: 100%;
     -unity-text-align: middle-center;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .vertical-list-button:hover {
     background-color: rgb(236, 0, 0);
     color: rgb(0, 0, 0);
     font-size: 28px;
-    width: 100%;
     -unity-text-align: middle-center;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .vertical-list-button:focus {
     background-color: rgb(236, 0, 0);
     color: rgb(0, 0, 0);
     font-size: 28px;
-    width: 100%;
     -unity-text-align: middle-center;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
