--- a/Assets/UI/style.uss
+++ b/Assets/UI/style.uss
@@ -1,36 +1,30 @@
 .text {
-    font-size: 50px;
+    font-size: 28px;
     color: rgb(255, 255, 255);
 }
 
 .button {
-    font-size: 28px;
-    color: rgba(0, 0, 0, 255);
     -unity-text-align: middle-center;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    color: rgba(0, 0, 0, 255);
+    border-right-width: 2px;
+    border-bottom-width: 5px;
+    border-left-width: 2px;
+    border-top-width: 1px;
+    border-left-color: rgba(58, 58, 58, 255);
+    border-right-color: rgba(58, 58, 58, 255);
+    border-top-color: rgba(58, 58, 58, 255);
+    border-bottom-color: rgba(58, 58, 58, 255);
+    background-color: rgba(209, 205, 175, 255);
 }
 
 .button:hover {
     background-color: rgb(236, 0, 0);
-    color: rgb(0, 0, 0);
-    font-size: 28px;
-    -unity-text-align: middle-center;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 .button:focus {
     background-color: rgb(236, 0, 0);
-    color: rgb(0, 0, 0);
-    font-size: 28px;
-    -unity-text-align: middle-center;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
