--- a/Assets/UI/PauseMenu.uxml
+++ b/Assets/UI/PauseMenu.uxml
@@ -1,13 +1,13 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/style.uss?fileID=7433441132597879392&amp;guid=7a0872cdef9bd764a8a69743a0519ed9&amp;type=3#style" />
     <ui:VisualElement name="background" style="background-color: rgba(0, 0, 0, 0.59); width: 100%; height: 100%;">
-        <ui:VisualElement name="header" style="align-items: center; margin-top: 5%; margin-bottom: 5%;">
+        <ui:VisualElement name="header" style="align-items: center; margin-top: 5%;">
             <ui:Label text="Game Paused" display-tooltip-when-elided="true" class="text" />
         </ui:VisualElement>
-        <ui:VisualElement name="menu" style="align-items: center;">
-            <ui:Button text="Resume" display-tooltip-when-elided="true" name="resume" class="button" style="width: 200px;" />
-            <ui:Button text="Restart" display-tooltip-when-elided="true" name="restart" class="button" style="width: 200px;" />
-            <ui:Button text="Quit" display-tooltip-when-elided="true" name="quit" class="button" style="width: 200px;" />
+        <ui:VisualElement name="menu" style="align-items: center; flex-grow: 1; justify-content: center;">
+            <ui:Button text="Resume" display-tooltip-when-elided="true" name="resume" class="button text" style="width: 200px; height: 50px;" />
+            <ui:Button text="Restart" display-tooltip-when-elided="true" name="restart" class="button text" style="width: 200px; height: 50px;" />
+            <ui:Button text="Quit" display-tooltip-when-elided="true" name="quit" class="button text" style="width: 200px; height: 50px;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
